Major code refactoring.
- Split massive 1,684-line checks/index.ts into focused modules
- Enable TypeScript strict mode with comprehensive error handling
- Add JSDoc documentation for all public methods and interfaces
- Implement intelligent caching system with LRU eviction and TTL
- Add performance utilities (debouncing, throttling, memory monitoring)
- Create modular check system (alt-text, content, external-links, etc.)
- Fix "Broken Links" display name to "Broken Internal Links"
- Restore sophisticated external link checking with CORS handling
- Add comprehensive error boundaries and validation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,10 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "isolatedModules": true,
-    "strictNullChecks": true,
+    "strict": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+    "noUncheckedIndexedAccess": true,
     "lib": [
       "DOM",
       "ES5",
